add check file controls

--- a/templates/index.html
+++ b/templates/index.html
@@ -71,13 +71,13 @@
                 <td colspan="2">
                 <label>graph path choice</label>
                 <div class="form-check">
-                  <input class="form-check-input" type="checkbox"  name="graph_path" value="random" id="defaultCheck1" checked>
+                  <input class="form-check-input" type="checkbox"  name="graph_path_rd" value="random" id="defaultCheck1" checked>
                   <label class="form-check-label" for="defaultCheck1" data-toggle="tooltip" title="allow for random choice when best edges have the same score. This might lead to variable results!">
                     Random
                   </label>
                 </div>
                 <div class="form-check">
-                  <input class="form-check-input" type="checkbox" name="graph_path" value="weight" id="defaultCheck2">
+                  <input class="form-check-input" type="checkbox" name="graph_path_wh" value="-w" id="defaultCheck2">
                   <label class="form-check-label" for="defaultCheck2" data-toggle="tooltip" title="allow for sequence similarity based weighting scheme. May lead to better results">
                     Weight
                   </label>
