--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,7 @@
                 <td colspan="2">
                 <label>graph path choice</label>
                 <div class="form-check">
-                  <input class="form-check-input" type="checkbox"  name="graph_path_rd" value="random" id="defaultCheck1" checked>
+                  <input class="form-check-input" type="checkbox"  name="graph_path_rd" value="-r" id="defaultCheck1" checked>
                   <label class="form-check-label" for="defaultCheck1" data-toggle="tooltip" title="allow for random choice when best edges have the same score. This might lead to variable results!">
                     Random
                   </label>
